Corrected spacing between modules in waybar

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -8,7 +8,7 @@
 	padding: 0px 10px;
     	background-color: #000000;
     	border-radius: 30px;
-    	margin: 5px 5px;
+    	margin: 5px 2px;
     	color: white;
 }
 
